# novachain-genesis

./: Cargo.toml  LICENSE.md  README.md
dashboard/: page.tsx
genesis/: genesis.json
pallets/memorylog/: lib.rs
pallets/nova_token/: lib.rs
pallets/sentience/: lib.rs
scripts/: faucet.py  start-dev.sh
vault/: NovaGenesisProphecy.txt
